--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
             </div>
         </section>
     <!-- Cargamos archivo JS -->
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
